--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "framer-motion": "^11.5.7",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
+    "mongodb": "^6.21.0",
     "next": "^15.3.3",
+    "nodemailer": "^7.0.10",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,6 +61,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.14.1",
